# AnthologyGPT

./: .env.example  README.md  anthology.py  embedding.json  pyproject.toml  research.md  run.sh  test.sh
src/: anthology.py  entities.py  main.py  test_entities.py  test_utils.py  utils.py
src/models/: anthology.py  character.py  era.py  faction.py
src/utils/: llm.py
